# DailyActionReminder

./: ActionDelegate.qml  AndroidAlarmBridge.cpp  AndroidAlarmBridge.h  CMakeLists.txt  Main.qml  Main.qrc  SoundTaskManager.cpp  SoundTaskManager.h  TestScheduling.qml  androidbackground.cpp  androidbackground.h  appstorage.cpp  appstorage.h  i_soundtaskmanager.h  logqml.cpp  logqml.h  main.cpp  soundtaskmanager.cpp  soundtaskmanager.h  soundtaskmanagerandroid.cpp  soundtaskmanagerandroid.h  soundtaskmanagerdesktop.cpp  soundtaskmanagerdesktop.h  soundtaskmanagerfactory.cpp  soundtaskmanagerfactory.h  soundtaskmanagerios.h  soundtaskmanagerios.mm
android/: AndroidManifest.xml  gradle.properties
android/res/drawable/: ic_stat_notify.xml
android/src/org/dailyactions/: AlarmReceiver.java  AlarmScheduler.java  ReminderSoundService.java
work/ios-container-after/ApplicationSupport/RolandPrinz/DailyActions/: state.json
work/ios-container-after/Preferences/: com.rolandprinz-local.DailyActions.plist
work/ios-container-dump/ApplicationSupport/RolandPrinz/DailyActions/: state.json
work/ios-container-dump/Preferences/: com.rolandprinz-local.DailyActions.plist
work/ios-container-order/: state.json
work/ios-container-repeat/ApplicationSupport/RolandPrinz/DailyActions/: state.json
work/ios-container-repeat/Preferences/: com.rolandprinz-local.DailyActions.plist
